<resources>
    <string name="app_name">WanAndroid</string>

    <string name="tab_home">首页</string>
    <string name="tab_knowledge">知识</string>
    <string name="tab_navigation">导航</string>
    <string name="tab_project">项目</string>
    <string name="net_err">网络异常</string>
    <string name="get_data_fail">获取数据失败</string>
    <string name="request_fail">请求失败</string>
    <string name="unknown_err">未知错误</string>

    <string name="login">登录</string>
    <string name="login_account_hint">邮箱/手机号</string>
    <string name="password">密码</string>
    <string name="free_register">免费注册</string>
    <string name="welcome_login_wanandroid">欢迎登录WanAndroid</string>
    <string name="account_format_err">账号格式错误</string>
    <string name="account_pwd_err">账号密码不匹配</string>
    <string name="register">注册</string>
    <string name="input_pwd">输入密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="account_len_limit">账号长度必须大于%d位</string>
    <string name="pwd_len_limit">密码长度必须大于%d位</string>
    <string name="pwd_not_match">两次输入的密码不一致</string>
    <string name="register_success">注册成功，快去登录吧</string>

    <string name="continues">继续</string>
    <string name="pause">暂停</string>
    <string name="download_noti">下载通知</string>
    <string name="download_fail">下载失败，请稍后重试</string>
    <string name="download_success">下载成功，点击安装</string>
    <string name="share">分享</string>
    <string name="open_it_with_browser">在浏览器打开</string>
    <string name="collect">收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="collect_fail">收藏失败，重试一下吧~</string>
    <string name="cancel_fail">取消失败，重试一下吧~</string>
    <string name="anonymous_develop">匿名开发</string>
    <string name="login_please">请先登录~</string>
    <string name="refresh">刷新</string>
    <string name="share_from">来自%s的分享：%s</string>
    <string name="setting_net">设置网络</string>
    <string name="retry_again">重试一下</string>
    <string name="net_sneak_off">网络开小差了~</string>
    <string name="arrived_end">已经到达尽头了~</string>
    <string name="project_url">项目地址</string>
    <string name="once_collected">你已经收藏过了~</string>
    <string name="collect_success">收藏成功~</string>
    <string name="copy_to_clipboard">已复制到粘贴板</string>
    <string name="desperately_loading">拼命加载中…</string>

</resources>