<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_article_detail_collect"
        android:orderInCategory="100"
        android:title="@string/collect"
        app:showAsAction="ifRoom" />

    <!--TODO：更换ICON-->
    <item
        android:id="@+id/item_article_detail_refresh"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_article_detail_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_article_detail_browser"
        android:icon="@drawable/ic_browser"
        android:orderInCategory="100"
        android:title="@string/open_it_with_browser"
        app:showAsAction="never" />
</menu>