<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/img_net_err" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/net_sneak_off"
        android:textColor="@color/common_light_gray_text"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_net_error_retry"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_blue_frame"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:text="@string/retry_again"
        android:textColor="@color/common_gray_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_net_error_setting_net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:text="@string/setting_net"
        android:textColor="@color/main_color"
        android:textSize="14sp" />
</LinearLayout>
