<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_download_root"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp"
    tools:context=".activity.login.LoginActivity">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/view_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="6dp"
            android:progress="0"
            android:progressDrawable="@drawable/ll_download_progress" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_download_continue"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="#1111"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/continues" />

    <TextView
        android:id="@+id/tv_download_pause"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="#1111"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/pause" />
</LinearLayout>
